updated Dataset class

--- a/Karpathy Splits.ipynb
+++ b/Karpathy Splits.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -14,7 +16,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "tags": []
    },
    "source": [
     "### Karpathy Splits "
@@ -37,7 +40,8 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "hidden": true
+    "hidden": true,
+    "tags": []
    },
    "outputs": [],
    "source": [
