--- a/show, attend and tell/dataset preprocessing for faster loading .ipynb
+++ b/show, attend and tell/dataset preprocessing for faster loading .ipynb
@@ -558,6 +558,64 @@
    "source": [
     "df.tok_len.max()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A black dog is running after a white dog in the snow .'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0,:]['caption']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a',\n",
+       " 'black',\n",
+       " 'dog',\n",
+       " 'is',\n",
+       " 'running',\n",
+       " 'after',\n",
+       " 'a',\n",
+       " 'white',\n",
+       " 'dog',\n",
+       " 'in',\n",
+       " 'the',\n",
+       " 'snow']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0,:]['tokens']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
